# convert-file

./: Dockerfile  Spec-RS-MG111-N01-1-ABL Multi-function Air Quality.txt  preprocessing-cost.py  preprocessing.py  pyproject.toml  readme.md  requirements.txt  result-doc.txt  result-docx.txt  test-from-doc.txt  test.py  test.txt
