[tool.poetry]
name = "convert-file"
version = "0.1.0"
description = ""
authors = ["Son Mac <son.lg@eoh.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pypandoc = "^1.11"
python-docx = "^0.8.11"
docx2txt = "^0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
